# experiments

./: .dir-locals.el  .gitignore  .gitmodules  Makefile  README.org  STM32G071RBTX_FLASH.ld  crossing.txt  dumpsterfire.org  license  main.c  meson.build  notes.org
drivers/: adc.c  dac.c  dma.c  flash.c  gpio.c  timx.c
include/: adc.h  dac.h  dma.h  errors.h  flash.h  forms.h  gpio.h  int_handlers.h  interrupter.h  main.h  nco.h  overseer.h  reciprocal_division.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  sysclk.h  timx.h  ui.h  wave.h
src/: dbg.h  errors.c  hal_config.c  int_handlers.c  interrupter.c  main.c  msp_init.c  nco.c  overseer.c  startup_stm32g071xx.s  stm32g0xx_it.c  sysclk.c  system_stm32g0xx.c  ui.c  wave.c
test/: meson.build  nco_general_stuff.h  test_distortion_encoder.c  test_distortion_on_signal.c  test_generation_option.c  test_math.c  test_nco.c  test_nco_increment.c  test_signal_generation.c
